package edu.jhu.apl.patterns_class.builder;

import edu.jhu.apl.patterns_class.XMLTokenizer;
import edu.jhu.apl.patterns_class.XMLTokenizer.XMLToken;
import edu.jhu.apl.patterns_class.dom.ElementProxy;

// basing this implementation off of the following token list generated by Test1.xml:
// Line 1:  PROLOG_START = '<?'
// Line 1:  PROLOG_IDENTIFIER = ' xml'
// Line 1:  ATTRIBUTE = ' version='
// Line 1:  ATTRIBUTE_VALUE = '"1.0"'
// Line 1:  ATTRIBUTE = ' encoding='
// Line 1:  ATTRIBUTE_VALUE = '"UTF-8"'
// Line 1:  PROLOG_END = '?>'
// Line 2:  TAG_START = '<'
// Line 2:  ELEMENT = 'document'
// Line 2:  TAG_END = '>'
// Line 3:  TAG_START = '  <'
// Line 3:  ELEMENT = 'element'
// Line 3:  ATTRIBUTE = ' attribute='
// Line 3:  ATTRIBUTE_VALUE = '"attribute value"'
// Line 3:  NULL_TAG_END = ' />'
// Line 4:  TAG_START = '  <'
// Line 4:  ELEMENT = 'element'
// Line 4:  NULL_TAG_END = '/>'
// Line 5:  TAG_START = '  <'
// Line 5:  ELEMENT = 'element'
// Line 5:  ATTRIBUTE = ' attribute='
// Line 5:  ATTRIBUTE_VALUE = '"attribute value"'
// Line 5:  ATTRIBUTE = ' attribute2='
// Line 5:  ATTRIBUTE_VALUE = '"attribute2 value"'
// Line 5:  TAG_END = ' >'
// Line 6:  VALUE = '              Element Value'
// Line 7:  TAG_CLOSE_START = '    </'
// Line 7:  ELEMENT = 'element'
// Line 7:  TAG_END = '>'
// Line 8:  TAG_START = '  <'
// Line 8:  ELEMENT = 'element'
// Line 8:  NULL_TAG_END = '/>'
// Line 9:  TAG_CLOSE_START = '</'
// Line 9:  ELEMENT = 'document'
// Line 9:  TAG_END = '>'
// Line 10:  NULL = ''

// Director
public class DOMDirectorSingleton {
    private static volatile DOMDirectorSingleton director = null;
    protected int i;

    private DOMDirectorSingleton() {}

    // https://www.geeksforgeeks.org/system-design/singleton-design-pattern/
    // Using example 4. Double-Checked Locking
    public static DOMDirectorSingleton getInstance() {
        if (director == null) {
            synchronized (DOMDirectorSingleton.class)
            {
                // check again as multiple threads can reach above step
                if (director == null)
                    director = new DOMDirectorSingleton();
            }
        }
        return director;
    }

    // helper
    private XMLToken getNextToken(XMLTokenizer tokenizer) {
        XMLToken token = tokenizer.getTokenAtIndex(i);
        i++;
        return token;
    }

    private int skipElement(XMLTokenizer tokenizer) {
        int depth = 1;
        XMLToken token;
        while (depth > 0) {
            token = getNextToken(tokenizer);
            if (token.getTokenType() == XMLToken.TAG_START) {
                depth++;
                getNextToken(tokenizer);
            } else if (token.getTokenType() == XMLToken.TAG_CLOSE_START || token.getTokenType() == XMLToken.NULL_TAG_END) {
                depth--;
            } else if (token.getTokenType() == XMLToken.NULL) {
                break;
            }
        }
        // index of closing tag of the element
        return i - 1;
    }

    public void buildDOMTree(XMLTokenizer tokenizer, boolean parseChildren, int start, int end, ElementProxy parent) {
        i = start;
        XMLToken token;
        System.out.println("building dom tree from " + start + " to " + end);

        while (i < end) {
            token = getNextToken(tokenizer);
            System.out.println(token.toString());

            switch (token.getTokenType()) {
                case XMLToken.PROLOG_START:
                    tokenizer.builder.buildDocument();
                    // skip until PROLOG_END
                    while (i < end && token.getTokenType() != XMLToken.PROLOG_END) {
                        token = getNextToken(tokenizer);
                    }
                    break;

                case XMLToken.TAG_START:
                    // next token must be element
                    token = getNextToken(tokenizer);
                    if (token.getTokenType() != XMLToken.ELEMENT) {
                        throw new IllegalArgumentException("TAG_START must be followed by ELEMENT, got: " + token);
                    }

                    tokenizer.builder.buildElementStart(token.getToken(), i - 1, tokenizer, parent);
                    token = tokenizer.getTokenAtIndex(i);
                    if (token.getTokenType() == XMLToken.NULL_TAG_END) {
                        getNextToken(tokenizer); // consume NULL_TAG_END
                        tokenizer.builder.buildElementEnd(i - 1);
                    } else if (!parseChildren) {
                        // skip the children for this element
                        skipElement(tokenizer);
                        // consume closing tag and build end
                        token = getNextToken(tokenizer);
                        tokenizer.builder.buildElementEnd(i - 1);
                    }
                    break;

                case XMLToken.ATTRIBUTE:
                    if (parseChildren) {
                        String name = token.getToken();
                        token = getNextToken(tokenizer);
                        if (token.getTokenType() != XMLToken.ATTRIBUTE_VALUE) {
                            throw new IllegalArgumentException("ATTRIBUTE must be followed by ATTRIBUTE_VALUE, got: " + token);
                        }
                        String value = token.getToken();
                        tokenizer.builder.buildAttribute(name, value);
                    }
                    break;

                case XMLToken.VALUE:
                    if (parseChildren) {
                        tokenizer.builder.buildText(token.getToken());
                    }
                    break;

                case XMLToken.TAG_CLOSE_START:
                    if (parseChildren) {
                        tokenizer.builder.buildElementEnd(i - 1);
                        // skip until TAG_END
                        while (i < end && token.getTokenType() != XMLToken.TAG_END) {
                            token = getNextToken(tokenizer);
                        }
                    }
                    break;

                case XMLToken.NULL_TAG_END:
                    if (parseChildren) {
                        tokenizer.builder.buildElementEnd(i - 1);
                    }
                    break;

                default:
                    // ignore other tokens
                    break;
            }
        }
    }

}
